--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,60 +12,38 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.hamburger-middle-line {
+  @apply block;
+}
+
+.hamburger-open {
+  @apply transition-transform ease-linear duration-500;
+  .hamburger-top-line {
+    transform: rotate(45deg) translateY(-1px) translateX(-1px);
+  }
+
+  .hamburger-bottom-line {
+    transform: rotate(-45deg) translateY(2px) translateX(-2px);
+  }
+
+  .hamburger-middle-line {
+    @apply opacity-0;
+  }
+}
+
+@layer components {
+  .btn {
+    @apply hover:bg-black text-black hover:text-white border-2 border-black px-4 py-2 tracking-widest mx-0 my-6 uppercase;
+  }
+  .item {
+    @apply relative overflow-hidden;
+  }
+
+  .item-gradient {
+    @apply absolute top-0 bottom-0 right-0 left-0 bg-gradient-to-b from-transparent to-gray-900 group-hover:from-gray-50 group-hover:to-white group-hover:opacity-70;
+  }
+}
